--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -115,6 +115,7 @@
 
 .card__inner {
   width: 100%;
+  height: 100%; /* added to set collection page products height */
 }
 
 .card--media .card__inner .card__content {
@@ -271,8 +272,8 @@
 }
 
 .card__badge {
-  align-self: flex-end;
-  grid-row-start: 3;
+  align-self: flex-start;
+  /* grid-row-start: 3; */
   justify-self: flex-start;
 }
 
